# insecure-coding-examples

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  buffer_underflow.c  disappearing_memset.c  double_free.c  heap_buffer_overflow.c  incorrect_type_conversion.c  infinite_loop.c  infinite_loop.cpp  numeric_truncation.c  signed_integer_overflow.c  stack_buffer_overflow.c  uncontrolled_format_string.c  unnamed_lock_guard.cpp  unsigned_integer_wraparound.c  use_after_free.c
.github/workflows/: cmake.yml
alternative/: commandline.cpp  filesystem.cpp  string_literals.cpp  strip_after_colon.cpp  user_defined_literals.cpp
exploit/: CMakeLists.txt
exploit/format/: CMakeLists.txt  chars_written.c  direct_access.c  dtors_test.c  environment_variable_shellcode.c  exploitable.c  exploitable_simple.c  field_width.c  getenvaddr.c
exploit/handbook/: CMakeLists.txt  find_stackpointer.c
exploit/poison/: Dockerfile  poison_uclibc.c
exploit/poison_musl/: Dockerfile  poison_musl.c
exploit/smashing/: CMakeLists.txt  exit.c  shellcode.c  smashing.md  test_shellcode.c
exploit/unlink/: CMakeLists.txt  Dockerfile  uclibc.c  unlink_uclibc.c
exploit/wargames/: CMakeLists.txt  launch.c  launch.cpp  launch_bigger.cpp  launch_fixed.cpp  push_string_shellcode_exploit.c  push_string_shellcode_test.c  smashing_shellcode_exploit.c  smashing_shellcode_test.c  stack_variable_exploit.c  tty_shellcode.c  tty_shellcode_asm.c  tty_shellcode_exploit.c  tty_shellcode_test.c
exploitable/: CMakeLists.txt  buffer_underflow.c  container_overflow.cpp  dangling_pointer.cpp  disappearing_memset.c  double_free.c  global_buffer_overflow.c  heap_buffer_overflow.c  heap_buffer_overflow_cwe.c  incorrect_type_conversion.c  incorrect_type_conversion.cpp  infinite_loop.cpp  numeric_truncation.c  numeric_truncation_ubsan.c  numeric_truncation_unsafe.c  signed_integer_overflow.c  signed_integer_overflow_simple.c  signed_integer_overflow_ubsan.c  signed_integer_overflow_unsafe.c  stack_buffer_overflow_cwe.c  temporary_capture.cpp  undefined_behavior.cpp  unnamed_lock_guard.cpp  unsigned_integer_wraparound.c  unsigned_integer_wraparound_ubsan.c  unsigned_integer_wraparound_unsafe.c  use_after_free.c
format/: exploitable.c  format.md  getenvaddr.c
handbook/: find_stackpointer.c  handbook.md
mitigation/sandbox/: fake_fork.c  fake_fork.h  sandbox.c
practice/: CMakeLists.txt  concat_strings.cpp  constexpr_ub.cpp  decay.cpp  downcasting.cpp  enum_class.cpp  filesystem.cpp  if_constexpr.cpp  midpoint_library.cpp  numeric_truncation_safe.c  safe_integer_comparisons.cpp  signed_integer_overflow_safe.c  string_literals.cpp  strip_after_colon.cpp  unsigned_integer_wraparound_safe.c  user_defined_literals.cpp
practice/guidelines/: CMakeLists.txt
practice/guidelines/CPL/: CMakeLists.txt  prefer_cpp.cpp
practice/guidelines/classes/: CMakeLists.txt  use_override.cpp
practice/guidelines/constants_and_immutability/: CMakeLists.txt  prefer_const.cpp
practice/guidelines/enumerations/: CMakeLists.txt  prefer_class_enums.cpp
practice/guidelines/expressions_and_statements/: CMakeLists.txt  always_initialize.cpp  avoid_casts.cpp  cautious_pointer_use.cpp  cautious_pointer_use_decay.cpp  dont_overflow.cpp  dont_underflow.cpp  dont_underflow_c.c  dont_underflow_cpp.cpp  prefer_the_standard_library.cpp  use_braced_init.cpp  use_named_cast.cpp  use_std_array.cpp
practice/guidelines/functions/: CMakeLists.txt  cautious_reference_capture.cpp  cautious_this_capture.cpp  cautious_this_capture_cpp17.cpp  cautious_this_capture_cpp_pre17.cpp
practice/guidelines/interfaces/: CMakeLists.txt  state_postconditions.cpp
practice/guidelines/naming_and_layout/: CMakeLists.txt  prefer_typesafe_literals.cpp
practice/guidelines/resource_management/: CMakeLists.txt  avoid_calling_new_and_delete.cpp  use_raii.cpp  use_raii_c.c  use_raii_cpp.cpp
practice/guidelines/standard_library/: CMakeLists.txt  avoid_bounds_errors.cpp  prefer_iostreams.cpp  use_byte_for_non_strings.cpp  use_string_for_strings.cpp
smashing/: exit.c  shellcodeasm.c  smashing.md  test_shellcode.c
vulnerability/: CMakeLists.txt  heartbleed.c
vulnerable/: buffer_underflow.c  disappearing_memset.c  heap_buffer_overflow.c  infinite_loop.cpp  numeric_truncation_ubsan.c  uncontrolled_format_string.c  undefined_behavior.cpp  unsigned_integer_wraparound_ubsan.c  use_after_free.c
wargames/: launch.c
