# -----------------------------------------------------------------
#
# C++ Core Guidelines
#
# -----------------------------------------------------------------

add_subdirectory(classes)
add_subdirectory(constants_and_immutability)
add_subdirectory(CPL)
add_subdirectory(enumerations)
add_subdirectory(expressions_and_statements)
add_subdirectory(functions)
add_subdirectory(interfaces)
add_subdirectory(naming_and_layout)
add_subdirectory(resource_management)
add_subdirectory(standard_library)
